--- a/seed_html/test_image.html
+++ b/seed_html/test_image.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Seed Quality Assessment</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 50px;
-            max-width: 600px;
-        }
-        .upload-area {
-            border: 2px dashed #007bff;
-            border-radius: 10px;
-            padding: 20px;
-            text-align: center;
-            background-color: #e9ecef;
-        }
-        .upload-area:hover {
-            background-color: #dfe6e9;
-        }
-        .result-box {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #ffffff;
-            border: 1px solid #ced4da;
-            border-radius: 10px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+    <link href="../css/styles.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container text-center">
@@ -52,6 +30,14 @@
             <p id="quality">Quality: <strong>Good</strong></p>
             <p id="defects">Defects: <strong>None</strong></p>
         </div>
+
+        <!-- Add a blank line -->
+        <br><br>
+        
+        <!-- Back to Profile Button -->
+            <a href="../welcome.php" class="btn btn-secondary mb-3">
+                <i class="fas fa-user"></i> Back to Profile
+            </a>
     </div>
 
     <script>
