--- a/seed_html/farmers.html
+++ b/seed_html/farmers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmers Information</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,7 +100,7 @@
     <!-- Form to Add Farmer Information -->
     <div class="form-container">
         <h2>Add New Farmer</h2>
-        <form action="add_farmer.php" method="POST">
+        <form action="../seed_php/add_farmer.php" method="POST">
             <label>
                 First Name:
                 <input type="text" name="FirstName" required>
@@ -151,5 +152,7 @@
             <button type="submit">Add Farmer</button>
         </form>
     </div>
+    <p><br></p>
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
 </body>
 </html>
