--- a/seed_html/farms.html
+++ b/seed_html/farms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -101,7 +102,7 @@
     <!-- Form to Add Farm Details -->
     <div class="form-container">
         <h2>Add New Farm</h2>
-        <form action="add_farm.php" method="POST">
+        <form action="../seed_php/add_farm.php" method="POST">
             <label>
                 Farmer ID:
                 <input type="number" name="FarmerID" required>
@@ -156,5 +157,7 @@
             <button type="submit">Add Farm</button>
         </form>
     </div>
+    <p><br></p>
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
 </body>
 </html>
