--- a/seed_html/growth_stages.html
+++ b/seed_html/growth_stages.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growth Stages </title>
+    <title>Growth Stages Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,11 +15,9 @@
             border-collapse: collapse;
             margin-bottom: 20px;
         }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
         th, td {
-            padding: 10px;
+            border: 1px solid #ddd;
+            padding: 8px;
             text-align: left;
         }
         th {
@@ -27,20 +26,30 @@
         .form-container {
             margin-top: 20px;
         }
-        input[type="text"], input[type="date"], select, textarea, button {
-            margin: 5px 0;
-            padding: 10px;
-            width: 100%;
+        .form-container form {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+        .form-container label {
+            display: flex;
+            flex-direction: column;
+            font-weight: bold;
+        }
+        .form-container input, .form-container select, .form-container textarea {
+            padding: 8px;
+            width: 250px;
             box-sizing: border-box;
         }
-        button {
-            background-color: #007BFF;
+        .form-container button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #0056b3;
+        .form-container button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -56,17 +65,43 @@
                 <th>Notes</th>
                 <th>Created At</th>
                 <th>Updated At</th>
-                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <!-- Placeholder for growth stage records -->
+            <!-- Example Growth Stages Records -->
+            <tr>
+                <td>1</td>
+                <td>101</td>
+                <td>Germination</td>
+                <td>2024-01-10</td>
+                <td>Healthy seed germination observed.</td>
+                <td>2024-01-11</td>
+                <td>2024-01-15</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>102</td>
+                <td>Vegetative</td>
+                <td>2024-02-01</td>
+                <td>Leaves and stems are growing rapidly.</td>
+                <td>2024-02-02</td>
+                <td>2024-02-05</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>103</td>
+                <td>Flowering</td>
+                <td>2024-03-10</td>
+                <td>Flower buds started appearing.</td>
+                <td>2024-03-11</td>
+                <td>2024-03-15</td>
+            </tr>
         </tbody>
     </table>
 
     <div class="form-container">
         <h2>Add New Growth Stage</h2>
-        <form action="add_growth_stage.php" method="POST">
+        <form action="../seed_php/add_growth_stage.php" method="POST">
             <label for="sowing_id">Sowing ID:</label>
             <input type="number" id="sowing_id" name="sowing_id" required>
 
@@ -83,10 +118,14 @@
             <input type="date" id="observed_date" name="observed_date" required>
 
             <label for="notes">Notes:</label>
-            <textarea id="notes" name="notes" rows="3"></textarea>
+            <textarea id="notes" name="notes" rows="4"></textarea>
 
             <button type="submit">Add Growth Stage</button>
         </form>
     </div>
+    <p><br></p>
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
