--- a/seed_html/quality_reports.html
+++ b/seed_html/quality_reports.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quality Reports </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,7 +68,7 @@
 
     <div class="form-container">
         <h2>Add New Quality Report</h2>
-        <form action="add_quality_report.php" method="POST">
+        <form action="../seed_php/add_quality_report.php" method="POST">
             <label for="test_id">Test ID:</label>
             <input type="number" id="test_id" name="test_id" required>
 
@@ -90,5 +91,7 @@
             <button type="submit">Add Quality Report</button>
         </form>
     </div>
+    <p><br></p>
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
 </body>
 </html>
