--- a/seed_html/seed_suppliers.html
+++ b/seed_html/seed_suppliers.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seed Suppliers </title>
+    <title>Seed Suppliers Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,11 +15,9 @@
             border-collapse: collapse;
             margin-bottom: 20px;
         }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
         th, td {
-            padding: 10px;
+            border: 1px solid #ddd;
+            padding: 8px;
             text-align: left;
         }
         th {
@@ -27,20 +26,30 @@
         .form-container {
             margin-top: 20px;
         }
-        input[type="text"], input[type="email"], textarea, button {
-            margin: 5px 0;
-            padding: 10px;
-            width: 100%;
+        .form-container form {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+        .form-container label {
+            display: flex;
+            flex-direction: column;
+            font-weight: bold;
+        }
+        .form-container input, .form-container textarea {
+            padding: 8px;
+            width: 250px;
             box-sizing: border-box;
         }
-        button {
-            background-color: #007BFF;
+        .form-container button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #0056b3;
+        .form-container button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -60,28 +69,66 @@
                 <th>Zip Code</th>
                 <th>Created At</th>
                 <th>Updated At</th>
-                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <!-- Placeholder for supplier records -->
+            <!-- Example Seed Supplier Records -->
+            <tr>
+                <td>1</td>
+                <td>Agro Supplies Co.</td>
+                <td>+1 234 567 8901</td>
+                <td>info@agrosupplies.com</td>
+                <td>123 Green St.</td>
+                <td>New York</td>
+                <td>NY</td>
+                <td>USA</td>
+                <td>10001</td>
+                <td>2024-01-01</td>
+                <td>2024-01-10</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Green World Seeds</td>
+                <td>+91 987 654 3210</td>
+                <td>contact@greenworld.com</td>
+                <td>45 Garden Ave.</td>
+                <td>Bangalore</td>
+                <td>Karnataka</td>
+                <td>India</td>
+                <td>560001</td>
+                <td>2024-01-02</td>
+                <td>2024-01-11</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Global Seeds Inc.</td>
+                <td>+44 123 456 7890</td>
+                <td>sales@globalseeds.com</td>
+                <td>78 Field Way</td>
+                <td>London</td>
+                <td>England</td>
+                <td>UK</td>
+                <td>SW1A 1AA</td>
+                <td>2024-01-03</td>
+                <td>2024-01-12</td>
+            </tr>
         </tbody>
     </table>
 
     <div class="form-container">
         <h2>Add New Supplier</h2>
-        <form action="add_supplier.php" method="POST">
+        <form action="../seed_php/add_supplier.php" method="POST">
             <label for="supplier_name">Supplier Name:</label>
             <input type="text" id="supplier_name" name="supplier_name" required>
 
             <label for="contact_number">Contact Number:</label>
-            <input type="text" id="contact_number" name="contact_number">
+            <input type="text" id="contact_number" name="contact_number" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" required>
 
             <label for="address">Address:</label>
-            <textarea id="address" name="address" rows="3" required></textarea>
+            <textarea id="address" name="address" rows="2" required></textarea>
 
             <label for="city">City:</label>
             <input type="text" id="city" name="city" required>
@@ -98,5 +145,9 @@
             <button type="submit">Add Supplier</button>
         </form>
     </div>
+    <p><br></p>
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
