--- a/seed_html/seed_test_results.html
+++ b/seed_html/seed_test_results.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seed Test Results </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -93,5 +94,7 @@
             <button type="submit">Add Seed Test Result</button>
         </form>
     </div>
+    <p><br></p>
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
 </body>
 </html>
