--- a/seed_html/seeds_management.html
+++ b/seed_html/seeds_management.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seeds Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,11 +15,9 @@
             border-collapse: collapse;
             margin-bottom: 20px;
         }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
         th, td {
-            padding: 10px;
+            border: 1px solid #ddd;
+            padding: 8px;
             text-align: left;
         }
         th {
@@ -27,25 +26,36 @@
         .form-container {
             margin-top: 20px;
         }
-        input[type="text"], select, textarea, input[type="number"], button {
-            margin: 5px 0;
-            padding: 10px;
-            width: 100%;
+        .form-container form {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+        .form-container label {
+            display: flex;
+            flex-direction: column;
+            font-weight: bold;
+        }
+        .form-container input, .form-container select, .form-container textarea {
+            padding: 8px;
+            width: 250px;
             box-sizing: border-box;
         }
-        button {
-            background-color: #007BFF;
+        .form-container button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #0056b3;
+        .form-container button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
     <h1>Seeds Management</h1>
+    <h2>Seed data</h2>
     <table>
         <thead>
             <tr>
@@ -61,17 +71,58 @@
                 <th>Storage Conditions</th>
                 <th>Created At</th>
                 <th>Updated At</th>
-                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <!-- Placeholder for seed records -->
+            <!-- Example Seed Records -->
+            <tr>
+                <td>1</td>
+                <td>Golden Corn</td>
+                <td>Zea mays</td>
+                <td>Hybrid</td>
+                <td>Cereal</td>
+                <td>All Season</td>
+                <td>90</td>
+                <td>50.00</td>
+                <td>USA</td>
+                <td>Dry, cool storage</td>
+                <td>2024-01-01</td>
+                <td>2024-01-10</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Wheat Classic</td>
+                <td>Triticum aestivum</td>
+                <td>Organic</td>
+                <td>Grain</td>
+                <td>Rabi</td>
+                <td>120</td>
+                <td>40.00</td>
+                <td>India</td>
+                <td>Airtight containers, low humidity</td>
+                <td>2024-01-02</td>
+                <td>2024-01-11</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Sunflower Supreme</td>
+                <td>Helianthus annuus</td>
+                <td>Non-GMO</td>
+                <td>Oilseed</td>
+                <td>Kharif</td>
+                <td>70</td>
+                <td>35.00</td>
+                <td>Russia</td>
+                <td>Cool and dark place</td>
+                <td>2024-01-03</td>
+                <td>2024-01-12</td>
+            </tr>
         </tbody>
     </table>
-
+    <p><br></p>
     <div class="form-container">
         <h2>Add New Seed</h2>
-        <form action="add_seed.php" method="POST">
+        <form action="../seed_php/add_seed.php" method="POST">
             <label for="seed_name">Seed Name:</label>
             <input type="text" id="seed_name" name="seed_name" required>
 
@@ -113,5 +164,8 @@
             <button type="submit">Add Seed</button>
         </form>
     </div>
+    <p><br></p>
+    
+    <a href="landing_page.html" class="btn btn-primary">Back</a>
 </body>
 </html>
