Update landing page image

--- a/seed_html/landing_page.html
+++ b/seed_html/landing_page.html
@@ -7,7 +7,8 @@
     <link href="../css/styles.css" rel="stylesheet" />
     <style>
         .hero {
-            background: rgb(14, 16, 52);
+            background: url('landing_image1.jpg') no-repeat bottom center/cover;
+            background-position: 100px left;
             color: white;
             text-align: center;
             padding: 100px 20px;
@@ -44,7 +45,7 @@
     <!-- Hero Section -->
     <div class="hero">
         <h1>Welcome to the Seed Quality Management System</h1>
-        <p>Manage seeds, farmers, environmental conditions, and more with ease.</p>
+        <p>Manage seeds, farmers, environmental conditions, and more.</p>
         <a href="../seed_html/index.html" class="btn btn-primary btn-lg">Get Started</a>
     </div>
 
